--- a/SoftwareDevelopConsole/SoftwareDevelopConsole.csproj
+++ b/SoftwareDevelopConsole/SoftwareDevelopConsole.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>AlxKor.SoftwareDevelop.SoftwareDevelopConsole</AssemblyName>
+    <RootNamespace>AlxKor.SoftwareDevelop.SoftwareDevelopConsole</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Persistance\Persistance.csproj" />
+  </ItemGroup>
 
 </Project>
